--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ ul#todo-list li {
 @media (max-width: 600px) {
     .container {
         padding: 10px;
-        height: auto;
+        height: 90vh;
     }
 
     .input-container {
