--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ ul#todo-list li {
 /* Responsive Design */
 @media (max-width: 600px) {
     .container {
-        padding: 5px;
+        padding: 10px 0 0 0;
         height: 80vh;
     }
 
