--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ ul#todo-list li {
 /* Responsive Design */
 @media (max-width: 600px) {
     .container {
+        margin-top: 20px;
         padding: 20px 2px 10px 2px;
         height: 90vh;
     }
