--- a/style.css
+++ b/style.css
@@ -136,8 +136,7 @@ ul#todo-list li {
 /* Responsive Design */
 @media (max-width: 600px) {
     .container {
-        margin-top: 20px;
-        padding: 20px 2px 10px 2px;
+        padding: 10px .5px 10px .5px;
         height: 90vh;
     }
 
