--- a/style.css
+++ b/style.css
@@ -137,8 +137,9 @@ ul#todo-list li {
 @media (max-width: 600px) {
     .container {
         padding: 30px;
-        height: 90vh;
+        height: 90vh ;
         width: 85%;
+        margin-bottom: 20px;
     }
 
     .input-container {
