--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ ul#todo-list li {
 @media (max-width: 600px) {
     .container {
         padding: 10px 10px 10px 10px;
-        height: 80vh ;
+         ;
         width: 85%;;
     }
 
