--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     box-shadow: 0 4px 8px rgba(158, 66, 66, 0.9);
     max-width: 400px;
     width: 100%;
-    height: 90vh;
+    /* height: 90vh; */;
     display: flex;
     flex-direction: column;
 }
@@ -137,7 +137,6 @@ ul#todo-list li {
 @media (max-width: 600px) {
     .container {
         padding: 10px 10px 10px 10px;
-         ;
         width: 85%;;
     }
 
