--- a/style.css
+++ b/style.css
@@ -142,12 +142,12 @@ ul#todo-list li {
     }
 
     .container {
-        margin-top: 15px; 
-        margin-bottom: 10px;
+        margin-top: 5px; 
+        /* margin-bottom: 10px; */
         height: auto; 
         padding: 20px; 
         /* padding-bottom: 80px; */
-        max-height: calc(90vh - 20px);
+        max-height: calc(90vh - 70px);
     }
 
     .input-container {
